--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="section" id="" style="padding: 0px; height: 100vh; width: 100vw; display: flex; background-repeat: no-repeat; background-size: cover; background-position: center; background-image: url('https://cdn.swirf.com/project/img_bg_login_offertepunt.png')">
             
             <div class="row" style="width: 100%; gap: 0rem; margin: auto auto;">
-                <div class="col s4 offset-s4" id="" style=""> 
+                <div class="col s12 l4 offset-l4" id="" style="">
                     <div style="padding: 0rem 2rem; background-color: white; min-height: 30vh; border-radius: 10px; border: 2px solid var(--color_7);">
                         <div style="margin: 2rem 0rem;" >
                             <img class="center-block responsive-img" src="https://cdn.swirf.com/project/img_offertepunt_blue.png" />
